...
        static let spacingTextsHeader: CGFloat = 30
        static let fontSizeTitle: CGFloat = 38
        static let horizontalPadding: CGFloat = 20
        static let spacingButtons: CGFloat = 16
        static let title: String = "Welcome to CryptoWallet!"
        static let buttonTitleGenerate: String = "GENERATE NEW GALLET"
        static let buttonTitleCapture: String = "OR CAPTURE"
        static let buttonTitleAccess: String = "ACCESS WALLET"
        static let description: String = "if you are creating a new wallet press the GENERATE button. Take note of the mnemonic phrase, " +
                                                                                                                "it should be stored in a safe place."
        static let bodyText: String = "address list elephant genuine thunder conduct avocado educate chronic useless basic rough notable noble" +
                                                                                            "water bless labor monster muscle nike view caution river flavor"
    }
    
...
